# Barcode_Sign

./: .gitignore  Cargo.toml  readme.md  test.db  test.txt
src/: main.rs  program.rs
