[package]
name = "barcode_sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
cliclack = "0.1.9"
eyre = "0.6.8"
image = "0.22.0"
qr_code = {version = "2.0.0", features = ["bmp"]}
rusqlite = { version = "0.29.0", features = ["bundled"] }
